<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pranav.hw05_1.AddCity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_CityName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:hint="@string/city_hint_string" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_StateInitial"
        android:layout_below="@+id/editText_CityName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:hint="@string/state_hint_string" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/savecity_sring"
        android:id="@+id/button_SaveCity"
        android:layout_below="@+id/editText_StateInitial"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp" />
</RelativeLayout>
